# mas-rd-course-4

./: .gitignore  README.md  agent.py  config.py  main.py  pyproject.toml  tools.py
example_output/: report_methods_of_ml_models.md
